# clan

./: .pre-commit-config.yaml  .pylintrc  Pipfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 2025_02_17_1420-e9e3aff3e9ba_create_players_table.py  2025_02_17_1423-4495f77ec972_create_players_table.py  2025_02_17_1756-9cae7a30822c_champions.py  2025_02_17_1756-9cae7a30822c_create_champions_table.py  2025_02_17_2327-0892e2dd8cd1_resources.py  2025_02_18_1739-de4a9a5caa3f_create_users_table.py  2025_02_20_1017-3354f8920788_create_clan_table.py  2025_02_22_1238-a629916f89c1_update_resources_model.py  2025_03_02_1120-9ecb24bd9ebf_create_resources_table.py  2025_03_02_1639-42ea33e7398c_create_missions_table.py  2025_03_09_1843-5ce65f8171f5_update_app_models.py
app/: database.py  main.py  seed.py
app/champions/: models.py  router.py
app/logic/: missions.py
app/models/: __init__.py  champions.py  clans.py  inventory.py  market.py  missions.py  resources.py  shared.py  users.py
app/players/: models.py  router.py
app/resources/: models.py
app/routers/: __init__.py  champions.py  clans.py  shared.py  users.py
app/routers/api/: __init__.py  auth.py  champions.py  clans.py  (+3 more)
app/services/: auth.py  champions.py  clans.py  missions.py  recources.py  users.py
app/templates/: champions.j2
app/users/: models.py  router.py  services.py
data/: classes.json  professions.json  races.json  resources.json
data/raw/: items.txt  names.txt  professions.txt  races.txt  remove_duplicate.py  resources.txt
